--- a/META.yml
+++ b/META.yml
@@ -11,7 +11,7 @@ configure_requires:
   CPAN::Meta::Prereqs: 0
   Module::Build: 0.38
 dynamic_config: 0
-generated_by: 'Minilla/v0.4.4, CPAN::Meta::Converter version 2.130880'
+generated_by: 'Minilla/v0.4.5, CPAN::Meta::Converter version 2.130880'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -29,11 +29,13 @@ no_index:
 provides:
   Test::LocalFunctions:
     file: lib/Test/LocalFunctions.pm
-    version: 0.07
+    version: 0.10
   Test::LocalFunctions::Fast:
     file: lib/Test/LocalFunctions/Fast.pm
   Test::LocalFunctions::PPI:
     file: lib/Test/LocalFunctions/PPI.pm
+  Test::LocalFunctions::Receptor:
+    file: lib/Test/LocalFunctions/Receptor.pm
   Test::LocalFunctions::Util:
     file: lib/Test/LocalFunctions/Util.pm
 recommends:
@@ -52,7 +54,7 @@ resources:
   bugtracker: https://github.com/moznion/Test--LocalFunctions/issues
   homepage: https://github.com/moznion/Test--LocalFunctions
   repository: git://github.com/moznion/Test--LocalFunctions.git
-version: 0.07
+version: 0.10
 x_contributors:
   - 'papix <mail@papix.net>'
   - 'moznion <moznion@gmail.com>'
