--- a/META.yml
+++ b/META.yml
@@ -29,7 +29,7 @@ no_index:
 provides:
   Test::LocalFunctions:
     file: lib/Test/LocalFunctions.pm
-    version: 0.10
+    version: 0.11
   Test::LocalFunctions::Fast:
     file: lib/Test/LocalFunctions/Fast.pm
   Test::LocalFunctions::PPI:
@@ -54,7 +54,8 @@ resources:
   bugtracker: https://github.com/moznion/Test--LocalFunctions/issues
   homepage: https://github.com/moznion/Test--LocalFunctions
   repository: git://github.com/moznion/Test--LocalFunctions.git
-version: 0.10
+version: 0.11
 x_contributors:
   - 'papix <mail@papix.net>'
+  - 'Syohei YOSHIDA <syohex@gmail.com>'
   - 'moznion <moznion@gmail.com>'
