--- a/META.yml
+++ b/META.yml
@@ -29,7 +29,7 @@ no_index:
 provides:
   Test::LocalFunctions:
     file: lib/Test/LocalFunctions.pm
-    version: 0.20
+    version: 0.21
   Test::LocalFunctions::Fast:
     file: lib/Test/LocalFunctions/Fast.pm
   Test::LocalFunctions::PPI:
@@ -39,7 +39,7 @@ provides:
   Test::LocalFunctions::Util:
     file: lib/Test/LocalFunctions/Util.pm
 recommends:
-  Compiler::Lexer: 0.12
+  Compiler::Lexer: 0.13
 requires:
   Carp: 0
   Exporter: 0
@@ -54,8 +54,8 @@ resources:
   bugtracker: https://github.com/moznion/Test--LocalFunctions/issues
   homepage: https://github.com/moznion/Test--LocalFunctions
   repository: git://github.com/moznion/Test--LocalFunctions.git
-version: 0.20
+version: 0.21
 x_contributors:
-  - 'papix <mail@papix.net>'
   - 'Syohei YOSHIDA <syohex@gmail.com>'
-  - 'moznion <moznion@gmail.com>'
+  - 'papix <mail@papix.net>'
+  - 'Taiki Kawakami <moznion@gmail.com>'
